--- a/index.html
+++ b/index.html
@@ -2,47 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Premprakash Khadka - Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/a2e0c6a5e0.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-white text-gray-800">
 
   <!-- Header -->
-  <header class="bg-white shadow sticky top-0 z-50">
-    <nav class="max-w-5xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-xl font-bold text-blue-600">Premprakash Khadka</h1>
-      <div class="hidden md:flex space-x-6">
-        <button onclick="scrollToSection('about')" class="hover:text-blue-600 transition">About</button>
-        <button onclick="scrollToSection('skills')" class="hover:text-blue-600 transition">Skills</button>
-        <button onclick="scrollToSection('experience')" class="hover:text-blue-600 transition">Experience</button>
-        <button onclick="scrollToSection('contact')" class="hover:text-blue-600 transition">Contact</button>
-      </div>
-    </nav>
+  <header class="flex flex-col items-center justify-center text-center py-12 space-y-4">
+    <img src="prem_profile.png" alt="Premprakash Khadka" class="w-36 h-36 rounded-full object-cover border-4 border-gray-300">
+    <h1 class="text-4xl font-bold">Premprakash Khadka</h1>
+    <p class="text-gray-600">Surveyor | Geomatics Engineer</p>
+    <a href="Premprakash_Khadka_Resume.pdf" target="_blank" class="mt-3 inline-block bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 transition">Download Resume</a>
+    <div class="space-x-4 mt-4 text-xl">
+      <a href="https://www.facebook.com/prem.khadka.1460693" target="_blank" class="text-gray-500 hover:text-blue-600"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.linkedin.com/in/premprakash-khadka-32b521345" target="_blank" class="text-gray-500 hover:text-blue-600"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/prem.khadka81" target="_blank" class="text-gray-500 hover:text-pink-500"><i class="fab fa-instagram"></i></a>
+    </div>
   </header>
 
-  <main class="max-w-5xl mx-auto px-4 py-12 space-y-16">
-
-    <!-- Hero -->
-    <section class="text-center">
-      <img src="prem_profile.png" alt="Premprakash Khadka" class="w-32 h-32 object-cover rounded-full mx-auto mb-4 border-4 border-gray-300 shadow">
-      <h2 class="text-3xl font-bold">Premprakash Khadka</h2>
-      <p class="text-gray-600 mb-4">Surveyor | Geomatics Engineer</p>
-      <a href="Premprakash_Khadka_Resume.pdf" target="_blank" class="inline-block bg-blue-600 text-white px-6 py-2 rounded-full shadow hover:bg-blue-700 transition">Download Resume</a>
-    </section>
+  <!-- Sections -->
+  <main class="max-w-3xl mx-auto px-6 space-y-16">
 
     <!-- About -->
-    <section id="about" class="bg-white rounded-xl shadow p-6">
-      <h3 class="text-2xl font-bold mb-3">About Me</h3>
-      <p>Namaste! I am <strong>Premprakash Khadka</strong>, a dedicated Surveyor working at the Survey Department of the Government of Nepal. Originally from Tribeni Municipality, Rukum West, I am passionate about land surveying and using geospatial data to support Nepal’s development. I completed my Diploma in Geomatics Engineering at the School of Geomatics and am currently pursuing a Bachelor's degree in Geomatics Engineering at Kathmandu University.</p>
+    <section id="about" class="space-y-4">
+      <h2 class="text-2xl font-semibold text-center">About Me</h2>
+      <p class="text-center">Namaste! I am <strong>Premprakash Khadka</strong>, a dedicated Surveyor at the Survey Department of Nepal. Originally from Tribeni Municipality, Rukum West, I am passionate about land surveying and using geospatial data to support Nepal’s development. I completed my Diploma in Geomatics Engineering at the School of Geomatics and am currently pursuing a Bachelor's degree in Geomatics Engineering at Kathmandu University.</p>
     </section>
 
     <!-- Skills -->
-    <section id="skills" class="bg-white rounded-xl shadow p-6">
-      <h3 class="text-2xl font-bold mb-3">Skills</h3>
-      <ul class="list-disc pl-6 space-y-1">
-        <li>Cadastral Surveying and Mapping</li>
-        <li>GIS and Remote Sensing</li>
+    <section id="skills" class="space-y-4">
+      <h2 class="text-2xl font-semibold text-center">Skills</h2>
+      <ul class="flex flex-wrap justify-center gap-4 text-gray-700">
+        <li>Cadastral Surveying</li>
+        <li>GIS & Remote Sensing</li>
         <li>Soil Erosion Modeling</li>
         <li>Land Administration</li>
         <li>Engineering Surveys</li>
@@ -52,45 +46,39 @@
     </section>
 
     <!-- Experience -->
-    <section id="experience" class="bg-white rounded-xl shadow p-6">
-      <h3 class="text-2xl font-bold mb-3">Experience</h3>
-      <ul class="space-y-3">
-        <li>
-          <strong>Government of Nepal (2019 - Present)</strong><br>
-          Surveyor in Cadastral Mapping & Land Administration
-        </li>
-        <li>
-          <strong>Rolwaling Hydropower (2018 - 2019)</strong><br>
-          Surveyor: Preliminary Survey, Control Points, Detail Survey
-        </li>
-        <li>
-          <strong>Apollo Construction (2017 - 2018)</strong><br>
-          Survey Engineer: Road Survey, Setting Out, Coordination
-        </li>
-      </ul>
+    <section id="experience" class="space-y-4">
+      <h2 class="text-2xl font-semibold text-center">Experience</h2>
+      <div class="space-y-3">
+        <div class="text-center">
+          <h3 class="font-bold">Government of Nepal (2019 - Present)</h3>
+          <p>Surveyor in Cadastral Mapping & Land Administration</p>
+        </div>
+        <div class="text-center">
+          <h3 class="font-bold">Rolwaling Hydropower (2018 - 2019)</h3>
+          <p>Surveyor: Preliminary Survey, Control Points, Detail Survey</p>
+        </div>
+        <div class="text-center">
+          <h3 class="font-bold">Apollo Construction (2017 - 2018)</h3>
+          <p>Survey Engineer: Road Survey, Setting Out, Coordination</p>
+        </div>
+      </div>
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="bg-white rounded-xl shadow p-6">
-      <h3 class="text-2xl font-bold mb-3">Contact Me</h3>
-      <p><strong>Phone:</strong> 9869718749</p>
-      <p><strong>Email:</strong> <a href="mailto:premkhadka205525@gmail.com" class="text-blue-600 underline">premkhadka205525@gmail.com</a></p>
-      <p><strong>Address:</strong> Tribeni Municipality, Rukum West, Nepal</p>
-      <p><strong>Facebook:</strong> <a href="https://www.facebook.com/prem.khadka.1460693" class="text-blue-600 underline" target="_blank">Prem Khadka</a></p>
-      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/premprakash-khadka-32b521345" class="text-blue-600 underline" target="_blank">premprakash-khadka</a></p>
-      <p><strong>Instagram:</strong> <a href="https://www.instagram.com/prem.khadka81" class="text-blue-600 underline" target="_blank">@prem.khadka81</a></p>
+    <section id="contact" class="space-y-4">
+      <h2 class="text-2xl font-semibold text-center">Contact</h2>
+      <div class="text-center">
+        <p><strong>Phone:</strong> 9869718749</p>
+        <p><strong>Email:</strong> <a href="mailto:premkhadka205525@gmail.com" class="text-blue-600 underline">premkhadka205525@gmail.com</a></p>
+        <p><strong>Address:</strong> Tribeni Municipality, Rukum West, Nepal</p>
+      </div>
     </section>
 
   </main>
 
-  <footer class="bg-white text-center py-4 shadow-inner">
-    <p class="text-gray-500">&copy; 2025 Premprakash Khadka. All rights reserved.</p>
+  <footer class="text-center py-6 mt-16 text-gray-500">
+    &copy; 2025 Premprakash Khadka. All rights reserved.
   </footer>
 
-  <script>
-    function scrollToSection(id) {
-      document.getElementById(id).scrollIntoView({ behavior: 'smooth' });
-    }
-  </script>
 </body>
 </html>
