--- a/index.html
+++ b/index.html
@@ -9,76 +9,93 @@
 </head>
 <body class="bg-white text-gray-800">
 
-  <!-- Header -->
-  <header class="flex flex-col items-center justify-center text-center py-12 space-y-4">
-    <img src="prem_profile.png" alt="Premprakash Khadka" class="w-36 h-36 rounded-full object-cover border-4 border-gray-300">
-    <h1 class="text-4xl font-bold">Premprakash Khadka</h1>
-    <p class="text-gray-600">Surveyor | Geomatics Engineer</p>
-    <a href="Premprakash_Khadka_Resume.pdf" target="_blank" class="mt-3 inline-block bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 transition">Download Resume</a>
-    <div class="space-x-4 mt-4 text-xl">
+  <!-- Navbar -->
+  <header class="fixed top-0 w-full bg-white bg-opacity-80 backdrop-blur-sm shadow-sm z-50">
+    <nav class="max-w-6xl mx-auto flex justify-between items-center px-6 py-3">
+      <h1 class="text-lg font-bold text-blue-600">Prem</h1>
+      <div class="space-x-6 hidden md:flex">
+        <a href="#about" class="hover:text-blue-600">About</a>
+        <a href="#skills" class="hover:text-blue-600">Skills</a>
+        <a href="#experience" class="hover:text-blue-600">Experience</a>
+        <a href="#contact" class="hover:text-blue-600">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Hero -->
+  <section class="h-screen flex flex-col justify-center items-center text-center px-4">
+    <img src="prem_profile.png" alt="Premprakash Khadka" class="w-36 h-36 rounded-full object-cover border-4 border-gray-300 shadow-lg mb-6">
+    <h2 class="text-4xl font-bold mb-2">Premprakash Khadka</h2>
+    <p class="text-gray-600 text-lg mb-4">Surveyor | Geomatics Engineer</p>
+    <a href="Premprakash_Khadka_Resume.pdf" target="_blank" class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 transition">Download Resume</a>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="max-w-3xl mx-auto px-6 py-16 text-center space-y-4">
+    <h3 class="text-3xl font-semibold">About Me</h3>
+    <p>Namaste! I am <strong>Premprakash Khadka</strong>, a dedicated Surveyor at the Survey Department of Nepal. Originally from Tribeni Municipality, Rukum West, I am passionate about land surveying and using geospatial data to support Nepal’s development. I completed my Diploma in Geomatics Engineering at the School of Geomatics and am currently pursuing a Bachelor's degree in Geomatics Engineering at Kathmandu University.</p>
+  </section>
+
+  <!-- Skills -->
+  <section id="skills" class="max-w-3xl mx-auto px-6 py-16 text-center space-y-4 bg-gray-50">
+    <h3 class="text-3xl font-semibold">Skills</h3>
+    <div class="flex flex-wrap justify-center gap-4 text-gray-700">
+      <span>Cadastral Surveying</span>
+      <span>GIS & Remote Sensing</span>
+      <span>Soil Erosion Modeling</span>
+      <span>Land Administration</span>
+      <span>Engineering Surveys</span>
+      <span>AutoCAD</span>
+      <span>Web Designing</span>
+    </div>
+  </section>
+
+  <!-- Experience -->
+  <section id="experience" class="max-w-3xl mx-auto px-6 py-16 text-center space-y-4">
+    <h3 class="text-3xl font-semibold">Experience</h3>
+    <div class="space-y-6">
+      <div>
+        <h4 class="font-bold">Government of Nepal (2019 - Present)</h4>
+        <p>Surveyor in Cadastral Mapping & Land Administration</p>
+      </div>
+      <div>
+        <h4 class="font-bold">Rolwaling Hydropower (2018 - 2019)</h4>
+        <p>Surveyor: Preliminary Survey, Control Points, Detail Survey</p>
+      </div>
+      <div>
+        <h4 class="font-bold">Apollo Construction (2017 - 2018)</h4>
+        <p>Survey Engineer: Road Survey, Setting Out, Coordination</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="max-w-3xl mx-auto px-6 py-16 text-center space-y-4 bg-gray-50">
+    <h3 class="text-3xl font-semibold">Contact Me</h3>
+    <p><strong>Phone:</strong> 9869718749</p>
+    <p><strong>Email:</strong> <a href="mailto:premkhadka205525@gmail.com" class="text-blue-600 underline">premkhadka205525@gmail.com</a></p>
+    <p><strong>Address:</strong> Tribeni Municipality, Rukum West, Nepal</p>
+    <div class="flex justify-center space-x-6 text-2xl mt-4">
       <a href="https://www.facebook.com/prem.khadka.1460693" target="_blank" class="text-gray-500 hover:text-blue-600"><i class="fab fa-facebook"></i></a>
       <a href="https://www.linkedin.com/in/premprakash-khadka-32b521345" target="_blank" class="text-gray-500 hover:text-blue-600"><i class="fab fa-linkedin"></i></a>
       <a href="https://www.instagram.com/prem.khadka81" target="_blank" class="text-gray-500 hover:text-pink-500"><i class="fab fa-instagram"></i></a>
     </div>
-  </header>
+  </section>
 
-  <!-- Sections -->
-  <main class="max-w-3xl mx-auto px-6 space-y-16">
-
-    <!-- About -->
-    <section id="about" class="space-y-4">
-      <h2 class="text-2xl font-semibold text-center">About Me</h2>
-      <p class="text-center">Namaste! I am <strong>Premprakash Khadka</strong>, a dedicated Surveyor at the Survey Department of Nepal. Originally from Tribeni Municipality, Rukum West, I am passionate about land surveying and using geospatial data to support Nepal’s development. I completed my Diploma in Geomatics Engineering at the School of Geomatics and am currently pursuing a Bachelor's degree in Geomatics Engineering at Kathmandu University.</p>
-    </section>
-
-    <!-- Skills -->
-    <section id="skills" class="space-y-4">
-      <h2 class="text-2xl font-semibold text-center">Skills</h2>
-      <ul class="flex flex-wrap justify-center gap-4 text-gray-700">
-        <li>Cadastral Surveying</li>
-        <li>GIS & Remote Sensing</li>
-        <li>Soil Erosion Modeling</li>
-        <li>Land Administration</li>
-        <li>Engineering Surveys</li>
-        <li>AutoCAD</li>
-        <li>Web Designing</li>
-      </ul>
-    </section>
-
-    <!-- Experience -->
-    <section id="experience" class="space-y-4">
-      <h2 class="text-2xl font-semibold text-center">Experience</h2>
-      <div class="space-y-3">
-        <div class="text-center">
-          <h3 class="font-bold">Government of Nepal (2019 - Present)</h3>
-          <p>Surveyor in Cadastral Mapping & Land Administration</p>
-        </div>
-        <div class="text-center">
-          <h3 class="font-bold">Rolwaling Hydropower (2018 - 2019)</h3>
-          <p>Surveyor: Preliminary Survey, Control Points, Detail Survey</p>
-        </div>
-        <div class="text-center">
-          <h3 class="font-bold">Apollo Construction (2017 - 2018)</h3>
-          <p>Survey Engineer: Road Survey, Setting Out, Coordination</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="space-y-4">
-      <h2 class="text-2xl font-semibold text-center">Contact</h2>
-      <div class="text-center">
-        <p><strong>Phone:</strong> 9869718749</p>
-        <p><strong>Email:</strong> <a href="mailto:premkhadka205525@gmail.com" class="text-blue-600 underline">premkhadka205525@gmail.com</a></p>
-        <p><strong>Address:</strong> Tribeni Municipality, Rukum West, Nepal</p>
-      </div>
-    </section>
-
-  </main>
-
-  <footer class="text-center py-6 mt-16 text-gray-500">
+  <footer class="text-center py-6 text-gray-500">
     &copy; 2025 Premprakash Khadka. All rights reserved.
   </footer>
 
+  <script>
+    // Smooth scroll if needed
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
+    });
+  </script>
 </body>
 </html>
