--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,13 +7,18 @@
   <title>Premprakash Khadka - Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://kit.fontawesome.com/a2e0c6a5e0.js" crossorigin="anonymous"></script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body class="bg-white text-gray-800">
 
   <!-- Navbar -->
-  <header class="fixed top-0 w-full bg-white bg-opacity-80 backdrop-blur-sm shadow-sm z-50">
-    <nav class="max-w-6xl mx-auto flex justify-between items-center px-6 py-3">
-      <h1 class="text-lg font-bold text-blue-600">Prem</h1>
+  <header class="fixed w-full top-0 bg-transparent z-50">
+    <nav class="max-w-6xl mx-auto flex justify-between items-center px-6 py-4">
+      <h1 class="text-xl font-bold text-blue-600">Prem</h1>
       <div class="space-x-6 hidden md:flex">
         <a href="#about" class="hover:text-blue-600">About</a>
         <a href="#skills" class="hover:text-blue-600">Skills</a>
@@ -86,16 +92,5 @@
     &copy; 2025 Premprakash Khadka. All rights reserved.
   </footer>
 
-  <script>
-    // Smooth scroll if needed
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
-      });
-    });
-  </script>
 </body>
 </html>
